Fix height issue on mobile

--- a/public/stylesheets/sass/_hammer.scss
+++ b/public/stylesheets/sass/_hammer.scss
@@ -74,7 +74,7 @@
     min-height: initial !important;
     height: auto !important;
     padding: 55px 0 0 0;
-    margin-bottom: -60px;
+    margin-bottom: -55px !important;
     position: relative;
     top: -55px;
     z-index: 1;
